--- a/README.ORG
+++ b/README.ORG
@@ -27,4 +27,7 @@ Akan melakukan packing semua function. Untuk function lainnya:
  - ramdisk: untuk pack ramdisk.img
  - boot. untuk pack boot.img
 
+* [[file:variables.txt.contoh][variable.txt.contoh]]
+File ini merupakan contoh dari file variable.txt, ubah dan sesuaikan isinya lalu /rename/ file ini menjadi variable.txt. isi dari file ini yang akan di source oleh kedua script diatas.
+
 Jika tidak melakukan modifikasi pada ramdisk (seperti editing file init.rc, atau mengganti binary init dan lainnya), ambil ramdisk dari boot.img lain yang ingin dipakai, letakkan di /directory/ ini dengan nama ramdisk.img.
