--- a/README.ORG
+++ b/README.ORG
@@ -32,3 +32,9 @@ Akan melakukan packing semua function. Untuk function lainnya:
 File ini merupakan contoh dari file variable.txt, ubah dan sesuaikan isinya lalu /rename/ file ini menjadi variable.txt. isi dari file ini yang akan di source oleh kedua script diatas.
 
 Jika tidak melakukan modifikasi pada ramdisk (seperti editing file init.rc, atau mengganti binary init dan lainnya), ambil ramdisk dari boot.img lain yang ingin dipakai, letakkan di /directory/ ini dengan nama ramdisk.img.
+* Binary Tambahan: Unpackbootimg
+Binary ini juga didapat dari hasil compile ROM LineageOS 12.1, cara penggunaan:
+#+begin_src shell
+bin/unpackbootimg -i <path-ke-boot.img>
+#+end_src
+Setiap parameter boot akan dibuat menjadi satu file teks dengan nama yang sama dengan parameter-nya, seperti boot.img-base, boot.img-cmdline, boot.img-pagesize, boot.img-ramdisk_offset dan lainnya, isi dari file - file ini yang perlu dimasukkan kedalam variable.txt
